权限控制搭建完成。

--- a/linsir-gateway/pom.xml
+++ b/linsir-gateway/pom.xml
@@ -47,5 +47,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-reactor-spring-boot3-starter</artifactId>
+            <version>1.39.0</version>
+        </dependency>
     </dependencies>
 </project>
