--- a/linsir-auth/linsir-auth-api/pom.xml
+++ b/linsir-auth/linsir-auth-api/pom.xml
@@ -30,29 +30,43 @@
                     <groupId>commons-logging</groupId>
                     <artifactId>commons-logging</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.linsir</groupId>
+                    <artifactId>linsir-core-auth</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
             <groupId>com.linsir</groupId>
             <artifactId>linsir-core-mybatis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.linsir</groupId>
+                    <artifactId>linsir-core-auth</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.linsir</groupId>
             <artifactId>linsir-core-db</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.linsir</groupId>
-            <artifactId>linsir-core-auth</artifactId>
-        </dependency>
-        <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-spring-boot3-starter</artifactId>
-            <version>1.39.0</version>
         </dependency>
         <dependency>
             <groupId>cn.dev33</groupId>
             <artifactId>sa-token-oauth2</artifactId>
-            <version>1.39.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
+            <version>1.40.0</version>
+        </dependency>
+        <!--<dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-jwt</artifactId>
+            <version>1.40.0</version>
+        </dependency>-->
     </dependencies>
 </project>
