--- a/linsir-saas/linsir-saas-api/pom.xml
+++ b/linsir-saas/linsir-saas-api/pom.xml
@@ -21,14 +21,39 @@
         <dependency>
             <groupId>com.linsir</groupId>
             <artifactId>linsir-core-mybatis</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.linsir</groupId>
+                    <artifactId>linsir-core-auth</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.linsir</groupId>
             <artifactId>linsir-core-cloud</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.linsir</groupId>
+                    <artifactId>linsir-core-auth</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.linsir</groupId>
             <artifactId>linsir-core-db</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-spring-boot3-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-redis-jackson</artifactId>
+            <version>1.40.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.dev33</groupId>
+            <artifactId>sa-token-oauth2</artifactId>
         </dependency>
     </dependencies>
 </project>
